--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,20 +19,8 @@ jobs:
         node-version: 16
         cache: 'npm'
 
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.npm
-        key: npm-${{ hashFiles('package-lock.json') }}
-        restore-keys: npm-
-
     - name: Install Dependencies
-      run: npm ci
-
-    - name: Build the Project
-      run: npm run build
-      env:
-        NODE_ENV: production
+      run: npm run render-build
 
     - name: Deploy to Render
       run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
